--- a/style/main.css
+++ b/style/main.css
@@ -231,7 +231,22 @@ body {
   cursor: pointer;
   z-index: 3;
 }
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #28a745;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
+.button:hover {
+  background-color: #218838;
+}
 /* Media Queries */
 @media screen and (max-height: 1000px) {
   .six .hat {
